--- a/MAPD724-Maps/Base.lproj/Main.storyboard
+++ b/MAPD724-Maps/Base.lproj/Main.storyboard
@@ -72,6 +72,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="map" destination="tlA-qh-Ztu" id="Q6V-tl-FVy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
